# twitterer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: authenticator.py  collector.py  const.py  main.py  tweet.py  twitterer.py
src/twitterer/: __init__.py  authenticator.py  collector.py  const.py  customsoup.py  scraping_progress.py  tweet.py  twitterer.py
tests/: manipulate_tweets.py  test.py  tweets_to_file.py
tests/for_debug/: parse_html.py  test_helper.py
