[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "twitterer"
version = "0.0.1"
description = "My package description"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3.10"]
dependencies = [
    "bs4",
    "fake-useragent",
    "jsonpickle",
    "lxml",
    "python-dotenv",
    "selenium",
]
